force-app/main/default/objects/Visit_Form__c/Visit_Form__c.object-meta.xml
<CustomObject>
    <label>Visit Form</label>
    <nameField>
        <displayFormat>VF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>