force-app/main/default/objects/Visit_Form__c/fields/Competitor_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Remarks__c</fullName>
    <label>Competitor Remarks</label>
    <type>TextArea</type>
</CustomField>