force-app/main/default/objects/Visit_Form__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>Contact Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>