force-app/main/default/objects/Visit_Form__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>CASE(
    TEXT(Customer_Type__c),
    &quot;Existing Primary Customer&quot;,  Primary_Customer__r.Name,
    &quot;Existing Secondary Customer&quot;, Secondary_Customer__r.Name,
    &quot;New Primary Customer&quot;, Primary_Customer_Name__c,
    &quot;New Sub Stockiest&quot;, Sub_Stockiest_Name__c,
    &quot;New Outlet&quot;, Outlet_Name__c,
    &quot;&quot;  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>