force-app/main/default/objects/Visit_Form__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Primary Customer</fullName>
            </value>
            <value>
                <fullName>Existing Secondary Customer</fullName>
            </value>
            <value>
                <fullName>New Primary Customer</fullName>
            </value>
            <value>
                <fullName>New Sub Stockiest</fullName>
            </value>
            <value>
                <fullName>New Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>