force-app/main/default/objects/Visit_Form__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Secondary_Customer__c)),
   CASESAFEID(Secondary_Customer__c),
    IF(
        NOT(ISBLANK(Primary_Customer__c)),
         CASESAFEID(Primary_Customer__c),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerId</label>
    <type>Text</type>
</CustomField>