force-app/main/default/objects/Visit_Form__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Attendence</label>
    <referenceTo>Daily_Log__c</referenceTo>
    <relationshipLabel>Visit Forms</relationshipLabel>
    <relationshipName>Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>