force-app/main/default/objects/Visit_Form__c/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <label>General Remarks</label>
    <type>TextArea</type>
</CustomField>