force-app/main/default/objects/Visit_Form__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <required>true</required>
    <scale>15</scale>
    <type>Location</type>
</CustomField>