force-app/main/default/objects/Visit_Form__c/fields/Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Name__c</fullName>
    <label>Outlet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>