force-app/main/default/objects/Visit_Form__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Forms</relationshipLabel>
    <relationshipName>Visit_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>