force-app/main/default/objects/Visit_Form__c/fields/Primary_Customer_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Business_Type__c</fullName>
    <label>Primary Customer Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Customer_Business_Type</valueSetName>
    </valueSet>
</CustomField>