force-app/main/default/objects/Visit_Form__c/fields/Primary_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Name__c</fullName>
    <label>Primary Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>