force-app/main/default/objects/Visit_Form__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Staple</fullName>
            </value>
            <value>
                <fullName>Bakery &amp; Staple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>