force-app/main/default/objects/Visit_Form__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Categories__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Group</valueSetName>
    </valueSet>
</CustomField>