force-app/main/default/objects/Visit_Form__c/fields/Secondary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Forms (Secondary Customer)</relationshipLabel>
    <relationshipName>Visit_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>