force-app/main/default/objects/Visit_Form__c/fields/Secondary_Customer_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Customer_Business_Type__c</fullName>
    <label>Secondary Customer Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secondary_Customer_Business_Type</valueSetName>
    </valueSet>
</CustomField>