force-app/main/default/objects/Visit_Form__c/fields/Sub_Stockiest_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stockiest_Name__c</fullName>
    <label>Sub Stockiest Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>