force-app/main/default/objects/Visit_Form__c/recordTypes/New_Customer.recordType-meta.xml
<RecordType>
    <fullName>New_Customer</fullName>
    <active>true</active>
    <label>New Customer</label>
</RecordType>