force-app/main/default/objects/Visit_Form__c/recordTypes/Primary_Customer.recordType-meta.xml
<RecordType>
    <fullName>Primary_Customer</fullName>
    <active>true</active>
    <label>Primary Customer</label>
</RecordType>