force-app/main/default/objects/Visit_Form__c/recordTypes/Secondary_Customer.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Customer</fullName>
    <active>true</active>
    <label>Secondary Customer</label>
</RecordType>