force-app/main/default/objects/Visit_Form__c/listViews/Last_Month_Visit_s.listView-meta.xml
<ListView>
    <fullName>Last_Month_Visit_s</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Product_Categories__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Product__c</columns>
    <columns>Competitor_Remarks__c</columns>
    <columns>Address__c</columns>
    <columns>State__c</columns>
    <columns>District__c</columns>
    <columns>Pincode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Month Visit&apos;s</label>
</ListView>