force-app/main/default/objects/Visit_Form__c/listViews/New_Sub_Stockiest_New_Mark_Expa.listView-meta.xml
<ListView>
    <fullName>New_Sub_Stockiest_New_Mark_Expa</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Product_Categories__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Competitor_Product__c</columns>
    <columns>Competitor_Remarks__c</columns>
    <columns>Address__c</columns>
    <columns>State__c</columns>
    <columns>District__c</columns>
    <columns>Pincode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>New Sub Stockiest</value>
    </filters>
    <filters>
        <field>Visit_Type__c</field>
        <operation>equals</operation>
        <value>New Market Expansion</value>
    </filters>
    <label>New Sub Stockiest - New Mark. Expen.</label>
</ListView>